2005-10-24  Darin Adler  <darin@apple.com>

        - fixed results for http://bugzilla.opendarwin.org/show_bug.cgi?id=5415

        Mitz's patch removed some strange code about 1-character runs and rounding.
        It affected the results of this one test. Here are new results.

        * fast/text/international/bidi-explicit-embedding-expected.checksum:
        * fast/text/international/bidi-explicit-embedding-expected.png:
        * fast/text/international/bidi-explicit-embedding-expected.txt:

2005-10-24  Maciej Stachowiak  <mjs@apple.com>

        Re-landing Dave Hyatt's changes from when the tree was closed.

        * fast/clip/008-expected.txt:
        * fast/css/acid2-expected.txt:
        * fast/css/acid2-pixel-expected.txt:
        * fast/table/overflowHidden-expected.txt:

2005-10-24  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin. Committed by beth.

	Fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=5384
	Soft hyphen displayed as hyphen when it is the first character 
	in a line/run.

        * fast/text/softHyphen-expected.checksum: Added.
        * fast/text/softHyphen-expected.png: Added.
        * fast/text/softHyphen-expected.txt: Added.
        * fast/text/softHyphen.html: Added.

2005-10-24  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin.  Committed by David Harrison.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=5449
        "OBJECT should be accessible by id/name as document property only if its only children are PARAMs"

        * fast/js/object-by-name-or-id-expected.txt: Added.
        * fast/js/object-by-name-or-id.html: Added.

2005-10-24  Beth Dakin  <bdakin@apple.com>

        Layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5318
	forced line break should not be allowed after a list marker

        * fast/lists/li-br-expected.checksum: Added.
        * fast/lists/li-br-expected.png: Added.
        * fast/lists/li-br-expected.txt: Added.