@@ -3,8 +3,8 @@ layer at (0,0) size 800x600
 layer at (0,0) size 800x600
   RenderBlock {HTML} at (0,0) size 800x600
     RenderBody {BODY} at (8,8) size 784x584
-      RenderBlock {DIV} at (0,0) size 784x128
-        RenderInline {A} at (0,0) size 128x14
-          RenderImage {IMG} at (0,0) size 128x128
+      RenderBlock {DIV} at (0,0) size 784x64
+        RenderInline {A} at (0,0) size 52x14
+          RenderImage {IMG} at (0,0) size 52x64
           RenderBR {BR} at (0,0) size 0x0
         RenderText {TEXT} at (0,0) size 0x0
